Change vendor name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cw/php-mvc-core",
+    "name": "c0ltw/php-mvc-core",
     "authors": [
         {
             "name": "C0LTWiNTERS",
